# ESP32-SMS-Sender-Control-App

./: .prettierignore  LICENSE  README.md  eslint.config.js  logo.ai  package.json  svelte.config.js
.github/: dependabot.yml
.github/workflows/: autofix.yml  build.yml  checks.yml  desktop-build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/utils/: structs.rs
src/lib/components/: BtleDeviceScan.svelte  DeviceControl.svelte  Footer.svelte  ItemHeaderRow.svelte
src/lib/stores/: footer.svelte.ts
src/lib/types/: esp.d.ts
src/lib/utils/: btle.ts  timeHelpers.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/device/: +page.svelte
